[tool.poetry]
name = "partypy"
version = "0.1.0"
description = "Simulate attendance at your party!"
authors = ["Tomas Beuzen"]
license = "MIT"
readme = "README.md"
documentation = "https://partypy.readthedocs.io/en/latest/"
homepage = "https://github.com/TomasBeuzen/partypy"
repository = "https://github.com/TomasBeuzen/partypy"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"
pandas = "^1.3.1"
altair = "^4.1.0"
altair-viewer = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
